...
                        fontWeight: FontWeight.w900,
                        fontFamily: 'monospace',
                        shadows: [Shadow(color: Colors.black, blurRadius: 15)],
                      ),
                    ),
                    const Text(
                      "متبقي حتى الصلاة",
                      style: TextStyle(
                        color: Colors.white, 
                        fontSize: 12,
                        fontWeight: FontWeight.bold,
                        shadows: [Shadow(color: Colors.black, blurRadius: 5)],
                      ),
...
